ewarehouse-apex/api/src/objects/Person__c.object
<CustomObject>
    <description>Represents a person that uses the CKW system. This includes farmers, CKWs, staff, field officers, etc.</description>
    <fields>
        <fullName>Age__c</fullName>
        <description>The age of a person</description>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>People</relationshipLabel>
        <relationshipName>People</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Country where person comes from</description>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>People</relationshipLabel>
        <relationshipName>People</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Poverty_Scorecard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The most recent poverty scorecard for this person</description>
        <label>Current Poverty Scorecard</label>
        <referenceTo>Poverty_Scorecard__c</referenceTo>
        <relationshipLabel>People</relationshipLabel>
        <relationshipName>People</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <description>Day + Month + Year that the person was born</description>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>District_Name__c</fullName>
        <formula>District__r.Name</formula>
        <label>District Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The district for the person</description>
        <label>District</label>
        <referenceTo>District__c</referenceTo>
        <relationshipLabel>People</relationshipLabel>
        <relationshipName>People</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Education_Level__c</fullName>
        <description>Highest level of education attained by this person.</description>
        <label>Education Level</label>
        <picklist>
            <picklistValues>
                <fullName>Primary Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O-Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certificate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diploma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Grade Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <description>The email address to contact this person by</description>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Father_Name__c</fullName>
        <description>The person&apos;s father&apos;s name, used for identification purposes</description>
        <label>Father&apos;s Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fathers_Name__c</fullName>
        <description>Name of person&apos;s father&apos;s name, used for identification purposes</description>
        <label>Father&apos;s Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>First name of the person</description>
        <label>First Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPS_Location_E__c</fullName>
        <description>GPS Location E. Must be in Decimal format</description>
        <label>GPS Location E</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPS_Location_N__c</fullName>
        <description>GPS Location N. Must be in Decimal forma</description>
        <label>GPS Location N</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>Is the person male or female</description>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Group_ID__c</fullName>
        <label>Group ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Physical handset assigned to this Person (in the case of GF-managed assets)</description>
        <label>Handset</label>
        <referenceTo>Phone__c</referenceTo>
        <relationshipLabel>Assignee</relationshipLabel>
        <relationshipName>Assignee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ID_Number__c</fullName>
        <label>ID Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAC_Farmer_Id_Temp__c</fullName>
        <label>LAC Farmer Id Temp</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Last name of the person</description>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <description>(optional) middle name for the person</description>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <description>Mobile phone number calculated based on Mobile Phone and Raw Mobile Number fields</description>
        <formula>/* If we have a Handset, use the number from its SIM Card */
IF( NOT( ISBLANK( Handset__c)),  
     Handset__r.SIM__r.Name, 
/* otherwise use the raw mobile number */
       Raw_Mobile_Number__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Of_Kin_Telephone__c</fullName>
        <label>Next Of Kin Telephone</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Of_Kin__c</fullName>
        <label>Next Of Kin</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parish__c</fullName>
        <description>Parish</description>
        <label>Parish</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person_Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The house hold that this person belongs to</description>
        <label>Person Household</label>
        <referenceTo>Person_Household__c</referenceTo>
        <relationshipLabel>People</relationshipLabel>
        <relationshipName>People</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Picture_URL__c</fullName>
        <label>Picture URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Raw_Mobile_Number__c</fullName>
        <description>(optional) Phone number provided for non GF-assets</description>
        <label>Raw Mobile Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The region that the person is in. Not required if the person has a district set</description>
        <label>Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>People</relationshipLabel>
        <relationshipName>People</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subcounty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Subcounty</description>
        <label>Subcounty</label>
        <referenceTo>Subcounty__c</referenceTo>
        <relationshipLabel>People</relationshipLabel>
        <relationshipName>People</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>What type of person this is</description>
        <inlineHelpText>Use person if none of the other option match your requirements</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>CKW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farmer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TDR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coffee A Cup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Validator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asocati</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MTN Channels Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Based Trainer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IITA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRAC PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BVAT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Village__c</fullName>
        <description>Village that the person lives in</description>
        <label>Village</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Person</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Middle_Name__c</columns>
        <columns>Handset__c</columns>
        <columns>Mobile_Number__c</columns>
        <columns>Raw_Mobile_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>District_Name__c</columns>
        <columns>GPS_Location_E__c</columns>
        <columns>GPS_Location_N__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Lac_People</fullName>
        <columns>NAME</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Middle_Name__c</columns>
        <columns>Contact__c</columns>
        <columns>Handset__c</columns>
        <columns>Mobile_Number__c</columns>
        <columns>Raw_Mobile_Number__c</columns>
        <columns>Country__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Colombia</value>
        </filters>
        <label>LAC People</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Overview</fullName>
        <columns>First_Name__c</columns>
        <columns>Middle_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Mobile_Number__c</columns>
        <columns>Gender__c</columns>
        <filterScope>Everything</filterScope>
        <label>Overview</label>
    </listViews>
    <nameField>
        <displayFormat>Person-{000000}</displayFormat>
        <label>Person ID</label>
        <type>AutoNumber</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01I70000000QMlTEAW_00N70000002sjVeEAI</fullName>
        <active>true</active>
        <field>Field_Officer_Productivity__c.Field_Officer__c</field>
        <filterItems>
            <field>Person__c.Type__c</field>
            <operation>equals</operation>
            <value>Field Officer</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Field Officer Productivity_Field Officer</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I70000000QP4BEAW_00N70000002sjOTEAY</fullName>
        <active>true</active>
        <field>Equipment_Return__c.Field_Officer__c</field>
        <filterItems>
            <field>Person__c.Type__c</field>
            <operation>equals</operation>
            <value>Field Officer</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Equipment Return_Field Officer</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I70000000QP4fEAG_00N70000002sjTTEAY</fullName>
        <active>true</active>
        <errorMessage>Please select a Person that has a type of BRAC PA</errorMessage>
        <field>BRAC_PA__c.Person__c</field>
        <filterItems>
            <field>Person__c.Type__c</field>
            <operation>equals</operation>
            <value>BRAC PA</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>BRAC PA_Person</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01I70000000QP4zEAG_00N70000002sjYsEAI</fullName>
        <active>true</active>
        <field>Field_Officer_Productivity_Targets__c.Field_Officer__c</field>
        <filterItems>
            <field>Person__c.Type__c</field>
            <operation>equals</operation>
            <value>Field Officer</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Field Officer Productivity Target_Field</name>
    </namedFilters>
    <pluralLabel>Persons</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>One_phone_number</fullName>
        <active>true</active>
        <description>Enforces the rule that only one of Handset or Raw Mobile Number is allowed to be set</description>
        <errorConditionFormula>NOT( ISBLANK( Handset__c ))  &amp;&amp; (LEN( Raw_Mobile_Number__c ) &gt;0)</errorConditionFormula>
        <errorMessage>Either Handset or Raw Mobile Number can be set, not both</errorMessage>
    </validationRules>
</CustomObject>